// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React/Autocomplete Fruit smoke-test 1`] = `
<div class="form-control">
  <label class="label items-start px-0"
         for="autocomplete-demo-fruit-field"
         id="headlessui-combobox-label-:r0:"
         data-headlessui-state
  >
    <span class="label-text text-base font-bold">
      Fruit
    </span>
  </label>
  <div class="relative">
    <input class="placeholder:text-subtle w-full input input-primary rounded-[--rounded-field] h-[42px] px-3"
           name="demo-fruit-field"
           placeholder="Start typing"
           id="autocomplete-demo-fruit-field"
           role="combobox"
           type="text"
           aria-expanded="false"
           aria-autocomplete="list"
           data-headlessui-state
           value
           aria-labelledby="headlessui-combobox-label-:r0:"
    >
  </div>
</div>
`;

exports[`React/Autocomplete InteractionTest play-test 1`] = `
<form>
  <div class="form-control">
    <label class="label items-start px-0"
           for="autocomplete-demo-fruit-field"
           id="headlessui-combobox-label-:r6:"
           data-headlessui-state
    >
      <span class="label-text text-base font-bold">
        Fruit
      </span>
    </label>
    <div class="relative">
      <input class="placeholder:text-subtle w-full input input-primary rounded-[--rounded-field] h-[42px] px-3"
             name="demo-fruit-field"
             placeholder="Start typing"
             id="autocomplete-demo-fruit-field"
             role="combobox"
             type="text"
             aria-expanded="false"
             aria-autocomplete="list"
             data-headlessui-state
             value
             aria-labelledby="headlessui-combobox-label-:r6:"
      >
    </div>
  </div>
</form>
`;

exports[`React/Autocomplete Invalid smoke-test 1`] = `
<div class="form-control">
  <label class="label items-start px-0"
         for="autocomplete-demo-fruit-field"
         id="headlessui-combobox-label-:r3:"
         data-headlessui-state
  >
    <span class="label-text text-base font-bold">
      Fruit
    </span>
  </label>
  <div class="relative">
    <input class="placeholder:text-subtle w-full input input-primary rounded-[--rounded-field] border-2 h-[42px] px-3 input-error"
           name="demo-fruit-field"
           placeholder="Start typing"
           id="autocomplete-demo-fruit-field"
           role="combobox"
           type="text"
           aria-expanded="false"
           aria-autocomplete="list"
           data-headlessui-state
           value
           aria-labelledby="headlessui-combobox-label-:r3:"
    >
  </div>
  <label class="leading-5 mt-2 [&amp;>label]:mt-0 text-error fill-error flex"
         id="autocomplete-demo-fruit-field-feedback"
  >
    <div class="-mt-0.5">
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 24 24"
           fill="currentColor"
           class="inline-block  w-6 h-6 mr-1.5 mb-0.5 icon-exclamation"
           aria-hidden="true"
      >
        <path d="m22.242,5.272l-3.515-3.515c-1.133-1.133-2.64-1.757-4.242-1.757h-4.971c-1.603,0-3.109.624-4.242,1.757l-3.515,3.514c-1.134,1.133-1.758,2.64-1.758,4.243v4.971c0,1.603.624,3.11,1.758,4.243l3.515,3.515c1.133,1.133,2.64,1.757,4.242,1.757h4.971c1.603,0,3.109-.624,4.242-1.757l3.515-3.514c1.134-1.133,1.758-2.64,1.758-4.243v-4.971c0-1.603-.624-3.11-1.758-4.243Zm-.242,9.213c0,1.069-.416,2.073-1.172,2.829l-3.515,3.515c-.756.755-1.76,1.171-2.828,1.171h-4.971c-1.068,0-2.072-.416-2.828-1.171l-3.515-3.515c-.756-.755-1.172-1.759-1.172-2.828v-4.971c0-1.069.416-2.073,1.172-2.829l3.515-3.515c.756-.755,1.76-1.171,2.828-1.171h4.971c1.068,0,2.072.416,2.828,1.171l3.515,3.515c.756.755,1.172,1.759,1.172,2.828v4.971Zm-11-.485V6c0-.552.447-1,1-1s1,.448,1,1v8c0,.552-.447,1-1,1s-1-.448-1-1Zm2.5,3.5c0,.828-.672,1.5-1.5,1.5s-1.5-.672-1.5-1.5.672-1.5,1.5-1.5,1.5.672,1.5,1.5Z"
              stroke="none"
        >
        </path>
      </svg>
    </div>
    Fruit is required
  </label>
</div>
`;
